Have buttons (blog & projects) working and serving the correct files, now I just need to work on css in index to properly align the items

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,27 +12,54 @@ as I think its a very good font (and I like ligatures)
 
 body {
     background-color: #3c3836;
+    margin: 0;
 }
 
 .github {
     width: 50px;
-    height: 50px;
+    height: 51px;
 }
-
-
-links {
-    display: flex;
-}
-
 
 .title-container {
     display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+    display: flex;
+    align-self: center;
     justify-content: center;
 }
+
 .title {
     color: #cc241d;
     font-weight: 600;
     letter-spacing: 2px;
+    display: flex;
+    align-self: center;
+    justify-self: center;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 button {
@@ -45,14 +72,3 @@ button:hover {
     background-color: #b2a687;
     cursor: pointer;
 }
-
-
-
-.container-buttons {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-}
-
-
-
